Se agrego un form de inicio en donde se mostraran todos los tipos de busqueda

--- a/PracticaRecorridoB/PracticaRecorridoB.csproj
+++ b/PracticaRecorridoB/PracticaRecorridoB.csproj
@@ -55,6 +55,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="forms\FrmInicio.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="forms\FrmInicio.Designer.cs">
+      <DependentUpon>FrmInicio.cs</DependentUpon>
+    </Compile>
     <Compile Include="FrmBusquedaL.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -71,6 +77,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="forms\FrmBusquedaB.resx">
       <DependentUpon>FrmBusquedaB.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="forms\FrmInicio.resx">
+      <DependentUpon>FrmInicio.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FrmBusquedaL.resx">
       <DependentUpon>FrmBusquedaL.cs</DependentUpon>
