--- a/PracticaRecorridoB/PracticaRecorridoB.csproj
+++ b/PracticaRecorridoB/PracticaRecorridoB.csproj
@@ -74,6 +74,12 @@
     <Compile Include="forms\FrmInicio.Designer.cs">
       <DependentUpon>FrmInicio.cs</DependentUpon>
     </Compile>
+    <Compile Include="forms\FrmMaxMin.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="forms\FrmMaxMin.Designer.cs">
+      <DependentUpon>FrmMaxMin.cs</DependentUpon>
+    </Compile>
     <Compile Include="FrmBusquedaL.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -99,6 +105,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="forms\FrmInicio.resx">
       <DependentUpon>FrmInicio.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="forms\FrmMaxMin.resx">
+      <DependentUpon>FrmMaxMin.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FrmBusquedaL.resx">
       <DependentUpon>FrmBusquedaL.cs</DependentUpon>
